--- a/veracity/package.json
+++ b/veracity/package.json
@@ -18,7 +18,7 @@
     "monk": "*",
     "mongoose": "~3.8.17",
     "mongoose-relationship": "*",
-    "bcrypt-nodejs": "*",
+    "bcrypt": "*",
     "moment": "*",
     "password-generator": "*",
     "connect-mongo": "*",
