added images sort of, maybe change later

--- a/veracity/package.json
+++ b/veracity/package.json
@@ -23,7 +23,8 @@
     "password-generator": "*",
     "connect-mongo": "*",
     "express-session": "*",
-    "email-templates": "*"
+    "email-templates": "*",
+    "GridFS": "*"
   },
   "main": "app.js",
   "devDependencies": {},
