--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "veracity",
-  "version": "0.0.4",
+  "version": "0.0.6",
   "engines": {
     "node": "0.10.x"
   },
   "private": true,
   "scripts": {
-    "start": "node app.js"
+    "start": "ENV=productio node app.js"
   },
   "dependencies": {
     "express": "~4.2.0",
